add style.css file and alter index.html for importing stylesheet

--- a/index.html
+++ b/index.html
@@ -3,19 +3,20 @@
     <head>
         <meta charset="utf-8">
         <title>Isaac Conceicao</title>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <header>
             <img src="header_img.png" alt="Imagem da face de Isaac Conceição">
-            <h1>Isaac Conceição</h1>
+            <h1 id="title">Isaac Conceição</h1>
         </header>
         <section>
             <header>
-                <h2>Posts</h2>
+                <h2 class="subtitle">Posts</h2>
             </header>
             <article>
                 <header>
-                    <h3>Post #1</h3>
+                    <h3 class="post_title">Post #1</h3>
                     <img src="post_img.png" alt="Imagem com a ilustração de um código de programação html, com uma paisagem tropical desfocada como plano de fundo">
                 </header>
                 <p>
