--- a/index.html
+++ b/index.html
@@ -20,23 +20,29 @@
                     <img src="post_img.png" class="post_img" alt="Imagem com a ilustração de um código de programação html, com uma paisagem tropical desfocada como plano de fundo">
                 </header>
                 <p class="post_content">
-                    lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut congue tortor quis molestie semper. Duis vel lobortis arcu, pellentesque facilisis velit. Vestibulum pulvinar neque nisi, at tincidunt nibh facilisis in. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam ornare ut purus quis faucibus. Sed molestie sodales neque, ut vehicula nulla elementum in. Nulla porttitor sapien lectus, sit amet convallis felis consectetur eget. Aenean pretium faucibus nulla. Phasellus a finibus justo. Ut vulputate felis ante, quis ornare leo ultricies vitae. Curabitur molestie facilisis augue, sed faucibus odio dignissim ornare.
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. In sed purus ac nibh condimentum iaculis at et lectus. Pellentesque commodo efficitur nulla non mollis. Phasellus tempor volutpat arcu. Vivamus fringilla dui quis interdum placerat. Aliquam erat volutpat. Etiam sit amet velit eu lorem accumsan consequat. Suspendisse quam nisl, varius eu leo in, tincidunt accumsan orci. Proin tincidunt eu dolor vitae faucibus. Vestibulum pretium felis eu arcu consectetur iaculis. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Maecenas semper id nisl ac eleifend. Cras vulputate enim vitae massa egestas, a tincidunt metus faucibus.
+                    
+                    Duis a sapien id tellus imperdiet imperdiet. Aliquam erat volutpat. Integer id neque elementum, viverra lorem non, gravida ex. Morbi feugiat vestibulum lacinia. Aenean tempus nulla vitae neque fermentum, ac facilisis ipsum eleifend. Aenean eu est feugiat, finibus enim non, blandit ex. Curabitur in erat posuere, efficitur orci ac, imperdiet tortor. Ut nec iaculis turpis, vitae ullamcorper orci. Morbi malesuada molestie nisl sed varius. Suspendisse iaculis pharetra nulla lacinia pharetra. Morbi varius rutrum nisi, vitae interdum turpis dignissim a. Fusce laoreet sem lectus, vel laoreet ex efficitur vitae. Praesent congue tortor eu mi tincidunt, ac mattis urna aliquam.
                 </p>
             </article>
         </section>
         <footer>
-            <ul>
+            <ul class="contacts_list">
                 <li>
-                    <a href="https://www.linkedin.com/in/isaac-conceicao/" target="_blank">LinkedIn</a>
+                    <img class="li_logo" src="github_logo.png">
+                    <a href="https://github.com/isaac-conceicao" target="_blank">isaac-conceicao</a>
                 </li>
                 <li>
-                    <a href="mailto:contato@isaac">E-mail</a>
+                    <img class="li_logo" src="LI-In-Bug.png">
+                    <a href="https://www.linkedin.com/in/isaac-conceicao/" target="_blank">isaac-conceicao</a>
                 </li>
                 <li>
+                    <img class="li_logo" src="mail_logo.png">
+                    <a href="mailto:contato@isaac">contato@isaac</a>
+                </li>
+                <li>
+                    <img class="li_logo" src="phone_logo.png">
                     <a href="tel:=+5571234567890">+55 (01) 2345-6789</a>
-                </li>
-                <li>
-                    <a href="https://github.com/isaac-conceicao" target="_blank">GitHub</a>
                 </li>
             </ul>
         </footer>
